# xy_django_model

./: MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/xy_web_server_demo/: requirements.txt
samples/xy_web_server_demo/source/Runner/Admin/xy_web_server_demo/: settings.py
xy_django_model/: __init__.py  model.py
